Camera placement is undone when changing Pose Asset properties from redo panel #122757
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#122757
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.94
Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-06-04 21:37, hash:
2ddc936cbb8b
Worked: never
Short description of error
My typical workflow with pose assets: make a pose, move camera so it captures the pose distinctly, press Create Pose Asset, tweak name and always uncheck Activate New Action(bad default). The problem is that when I type the name of new asset or uncheck the checkbox, camera moves back to where it was before I adjusted it. That also updates thumbnail and thus ruins it.
Exact steps for others to reproduce the error
Video
Camera placement is undone when changing Create Pose Asset parameters, ruins asset previewto Camera placement is undone when changing Create Pose Asset parameters, ruins asset thumbnailHi, thanks for the report. Guess camera is locked in view? Can confirm in that case.
In F3 search menu? Enable
developer extras
in preferences, it would resolve the problem.Oh, right, I forgot to mention that I do that from Camera Perspective(entered by Numpad 0). I move the camera by flying (Shift + ~) while it is locked to view and if I create an asset just after that and tweak the name, the camera moves back. This occurs even if I exit the Camera Perspective to observe the camera in 3rd person and then trigger the bug. Camera visibly moves back.
Should I edit the issue text to reflect that?
And yes, enabling extras does resolve searchability of the "Create Pose Asset" operator.
Camera placement is undone when changing Create Pose Asset parameters, ruins asset thumbnailto Camera placement is undone when changing Pose Asset properties from redo panelWith walk navigation, I'm not able to redo this. But can confirm If I move locked camera with trackpad (undo step is not registered with that)
Here I recorded video where Fly Navigation is used and bug is apparent. Pressing Enter after adding letter to name moves camera back. I moved the mouse pointer but didn't press any mouse buttons, don't be distracted by that.
Thanks, can confirm
Should the labels be updated? The issue still says
Status: Needs Information from User
.Yeah, bit confused what should be the correct module here. Camera view got reset after the "redo panel changes" so I guess it's related to undo/core module? (But it's not happening with the redo panel properties of other operators...)
I cannot reproduce this behavior in current 4.3/main?
I always get undo steps written when moving the locked camera currently (walk mode or rotation using numpad keys)
Also if the undo step is missing, this is an issue in 3DView editor, so rather a UI module problem - definitively not Core.
Can still confirm in current main :)
@mont29 , can you check the attached file?:
create pose asset
in viewportI'm confused... In this file the camera is not locked in the 3DView?
So it looks like the issue here is that walk/fly modes are not creating undo steps when the camera is not locked in 3DView?
Camera was never locked. I also had this confusion when I first looked at the report 😅
AFAICS, whether it's in camera view or not, walk mode is never writing an undo step
I remember I added the "undo step when navigating locked camera" 1-2 years ago. Maybe we could also write undo step for walk navigation? But I think this will work only in object mode (uses memfile undo)
Here the problem is that even in camera view, walk.fly do not add an undo step, which they should do, since they are effectively editing the camera object.
Yeah I saw that limitation in code re. memfile undo... I do not know why this is there tbh, afaik we can mix memfile undo steps with editmode ones, that's e.g. what happens when removing a modifier while in Edit mode. (Although it is somewhat broken currently, see all the 'undo' open bugs...)