Fix #122757: Walk/Fly modes would not push undo step when moving an object around.

In case the general 'locked in 3DView' code does not create an undo push
(e.g. because the 3DView is in camera mode, but is _not_ locked to the
camera), but the walk/fly operator does transform an object, it still
needs to push an undo step.